stylesheets/styles.css
/* Variables */

:root {
    --primary-dark: #222c31;
    --secondary-dark: #003750;
    --secondary-color: #00547a;
    --accent-color: rgba(255, 255, 255, 0.863);
    font-family: 'Nexa-Light';
}
@font-face {
    font-family: 'Nexa-Heavy';
    src: url('/assets/Nexa-Heavy.ttf');
}
@font-face {
    font-family: 'Nexa-Light';
    src: url('/assets/Nexa-ExtraLight.ttf');
}
*{
    color: var(--accent-color);
    cursor: default;
}
a *{
    cursor: pointer;
}
a, a > *:visited{
    color: var(--accent-color);
    text-decoration: none;
}
html{
    margin: 0;
    padding: 0;
    color: var(--accent-color);
}
body{
    height: 100vh;
    margin: -20px 0;
    padding: 0;
    background-color: var(--primary-dark);
}
.side-nav{
    position: fixed;
    top: 0;
    left: 0;
    background-color: var(--secondary-dark);
    width: 300px;
    height: 100%;
    padding-top: 30px;
}
main{
    margin-left: 300px;
    height: fit-content;
    overflow: hidden;
    
}
.name{
    width: fit-content;
    font-family: 'Nexa-Heavy', sans-serif;
}
.homepage-header{
    padding: 1em 1em 1em 1em;
}
.introduction-container{
    display: grid;
    grid-template-columns: 1fr 1fr;
}
.introduction-right{
    display: flex;
    justify-content: center;
    padding: 1em 1em 1em 1em;
}
.introduction-right > img{
    max-width: 100%;
    height: auto;
    object-fit: contain;
}
.profile-pic{
    width: 50%;
    border-radius: 50%;
}
.center{
    display: block;
    margin: 0 auto;
}
.side-introduction{
    width: 80%;
    text-align: center;
}
.nav-icons svg{
    width: 35px;
    filter: invert(100%);
    margin: 0px 6px;
}
.nav-icons{
    width: fit-content;
}
.nav-item{
    text-align: center;
    width: 100%;
}
.nav-item:hover{
    background-color: var(--secondary-color);
    cursor: pointer;
}
.space-below-30{
    margin-bottom: 30px;
}
.space-below-15{
    margin-bottom: 15px;
}

.sidebar-bottom{
    position: absolute;
    bottom: 0px;
    width: 100%;
}
.sidebar-nav{
    position: absolute;
    bottom: 100px;
    width: 100%;
}
.contact-btn{
    position:absolute;
    bottom: 0;
    text-align: center;
    width: 100%;
    outline: 1px solid --primary-dark;
    height: 100px;
}
.contact-btn button{
    font-family: 'Nexa-Light';
    color: var(--primary-dark);
    border: none;
    font-size: large;
    margin-bottom: 50px;
    padding: 10px;
    font-weight: bold;
    cursor: pointer;
    border-radius: 2px;
}
.shading-div{
    height: 100%;
    width: 100%;
    z-index: 1000;
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    top: 0;
    left: 0;
    visibility: hidden;
}
.contact-popup{
    height: fit-content;
    width: 40%;
    top: 15%;
    background-color: var(--secondary-dark);
    position:fixed;
    left: 30%;
    z-index: 1001;
    visibility: hidden;
    padding: 15px 15px;
    border-radius: 2px;
}
.closing-x{
    margin: 5px 5px;
    padding: 0 4px;
    position: absolute;
    top: 0;
    right: 0;
    font-size: large;
}
.closing-x:hover{
    cursor: pointer;
}

.title{
    width: fit-content;
    font-family: 'Nexa-Heavy', sans-serif;
    margin: 0;
    padding: 0;
}
.contact-form > input{
    margin-bottom: 20px;
    height: 2em;
    border: none;
    border-radius: 2px;
    width: 100%;
}
.contact-form > textarea{
    margin-bottom: 20px;
}
.contact-form > input, .contact-form > textarea{
    font-family: "Nexa-Light";
    font-weight: bold;
    cursor: text;
}
#email-content{
    resize: none;
    width: 100%;
}
#contact-submit-button{
    font-family: "Nexa-Light";
    font-size: large;
    font-weight: bold;
}
#contact-submit-button:hover{
    background-color: rgb(204, 204, 204);
    cursor: pointer;
}

.error-message{
    color: red;
    width: fit-content;
    margin: 0 auto;
}
.success-message{
    color: green;
    width: fit-content;
    margin: 0 auto;
}

#skill-card-container{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    grid-gap: 1em;
    padding: 1em;
}

.skill-card{
    /* border: 1px solid white; */
    border-radius: 2px;
    /* background-color: var(--secondary-dark); */
    padding: 10px
}
.skill-title{
    margin-top: 5px;
    
}
.skill-description{

}
.homepage-button{
    background-color: var(--accent-color);
    border:none;
    color: var(--secondary-color);
    height: 3em;
    width: fit-content;
    font-family: 'Nexa-Heavy';
    
}

.homepage-header > button{
    font-family: 'Nexa-Light';
    color: var(--primary-dark);
    border: none;
    font-size: large;
    margin-bottom: 50px;
    padding: 10px;
    font-weight: bold;
    cursor: pointer;
    border-radius: 2px;
}

#resume-page{
    /* background-color: var(--accent-color); */
    width: 80%;
    margin: 5vh auto 0 auto;
    color: var(--primary-dark);
}

iframe{
    border: none;
}







/* TIMELINE STYLING */
.timeline{
    border-right: 5px solid white;
    width: 50%;
}

.event{
    display: flex;
}

.event > *{
    padding-right: 20px; 
    float: right;
    background-color: red;
}

